--- a/front/pages/History.module.css
+++ b/front/pages/History.module.css
@@ -5,14 +5,28 @@
   justify-content: start;
   align-items: center;
   min-width: 100vw;
+  width: 100vw;
 }
 .title {
   margin-top: 1rem;
   margin-bottom: 1rem;
   line-height: 1.15;
-  font-size: 3.6rem;
+  font-size: 15vw;
 }
 
 .title {
   text-align: center;
+}
+
+.main {
+  width: 95vw;
+}
+
+@media (width >= 640px) {
+  .title {
+    font-size: 6rem;
+  }
+  .main {
+    width: 590px;
+  }
 }
