--- a/front/modules/history/entry/style.module.css
+++ b/front/modules/history/entry/style.module.css
@@ -24,7 +24,7 @@
   }
 
   .name {
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -60,7 +60,7 @@
 
   .title {
     display: block;
-    width: 100%;
+    width: 100vw;
     margin: 0;
     padding: 0 0vw;
     margin-bottom: 2vh;
