fix(front): style updates

--- a/packages/front/modules/music/history/entry/style.module.css
+++ b/packages/front/modules/music/history/entry/style.module.css
@@ -1,188 +1,12 @@
-@value border-color: grey;
-
 .container {
-  background-color: var(--color-music-light2);
-  border: 2px solid border-color;
+  --history-entry-background-color: var(--color-music-light2);
+  --color-link: var(--color-music-link);
+  --color-link-hover: var(--color-music-link-hover);
+
+  background-color: var(--history-entry-background-color);
+  border: 2px solid var(--history-entry-border-color);
   border-radius: 10px;
   width: 100%;
   margin: 0.25rem;
   overflow: hidden;
-}
-
-.header p {
-  margin: 0;
-  padding: 0;
-}
-
-.header {
-  padding: 0rem 1rem;
-  height: 3rem;
-  display: flex;
-  flex-direction: row;
-
-  @media (width >= 640px) {
-    height: 4rem;
-  }
-
-  .fullTime {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    .time {
-      display: flex;
-      justify-content: center;
-      font-size: 1rem;
-    }
-
-    .date {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 0.67rem;
-    }
-  }
-
-  .name {
-    width: 100vw;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-
-    .item,
-    .itemLeftCenter {
-      margin: 0 1rem;
-      padding: 0;
-    }
-
-    .itemLeftCenter {
-      text-align: center;
-      width: 100%;
-    }
-  }
-}
-
-.center {
-  display: none;
-}
-
-.header:hover,
-.header:has(+ .dropdown):hover {
-  cursor: pointer;
-  background-color: var(--color-music-darker);
-  color: white;
-}
-
-.header:has(+ .dropdown) {
-  background-color: var(--color-music);
-  color: white;
-}
-
-.dropdown {
-  padding: 2vh 5vw;
-  border-top: 2px solid border-color;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-}
-
-.dropdown .item {
-  display: block;
-  width: 100vw;
-  margin: 0;
-  padding: 0 0vw;
-  margin-bottom: 2vh;
-}
-
-.dropdown .column2 {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 100%;
-}
-.dropdown .column2 > span {
-  display: flex;
-  flex-direction: row;
-  width: 50%;
-}
-
-.dropdown span {
-  display: flex;
-}
-
-.dropdown .line,
-.dropdown .line1half {
-  width: 100%;
-  margin: 0;
-}
-
-.dropdown .line1half {
-  margin-bottom: 0.5em;
-}
-
-.dropdown .weight input {
-  min-width: 50px;
-}
-
-.dropdown > span + span {
-  margin-right: 4vw;
-}
-
-span.break {
-  flex-basis: 100%;
-  height: 0;
-  margin-bottom: 3vh;
-}
-
-.dropdown input {
-  min-width: 50px;
-  margin: 0 0.25rem;
-  background-color: white;
-  border-width: 1px;
-  border-radius: 2vw;
-}
-
-.dropdown .weight input {
-  width: 5vw;
-}
-
-.dropdown .dropdownTime {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.dropdown .dropdownTime span {
-  display: flex;
-  flex-direction: column;
-  padding: 0 0.5vw;
-}
-
-.showMinLg {
-  display: none;
-}
-.hideMinLg {
-  display: block;
-}
-
-@media (width >= 640px) {
-  .header {
-    padding: 1.25rem 2rem;
-  }
-
-  .dropdown {
-    padding: 1rem 2rem;
-  }
-
-  .showMinLg {
-    display: block;
-  }
-
-  .hideMinLg {
-    display: none;
-  }
 }
