--- a/packages/front/styles/globals.css
+++ b/packages/front/styles/globals.css
@@ -1,300 +1,5 @@
-:root {
-  --color-red-hue: -8;
-  --color-yellow-hue: calc(var(--color-red-hue) + 66);
-  --color-orange-hue: calc(var(--color-red-hue) + 38);
-  --color-blue-hue: calc(var(--color-red-hue) + 210);
-  --color-green-hue: calc(var(--color-red-hue) + 160);
-  --color-cyan-hue: calc(var(--color-red-hue) + 185);
-
-  --color-light: 33%;
-  --color-light2: 42%;
-  --color-light3: 53%;
-  --color-light4: 66%;
-  --color-darker: 15%;
-  --color-darker2: 30%;
-  --color-darker3: 70%;
-  --color-darker4: 90%;
-
-  --color-red: hsl(var(--color-red-hue), 100%, 50%);
-  --color-red-darker: color-mix(
-    in srgb,
-    var(--color-red),
-    #000 var(--color-darker)
-  );
-  --color-red-darker2: color-mix(
-    in srgb,
-    var(--color-red),
-    #000 var(--color-darker2)
-  );
-  --color-red-darker3: color-mix(
-    in srgb,
-    var(--color-red),
-    #000 var(--color-darker3)
-  );
-  --color-red-darker4: color-mix(
-    in srgb,
-    var(--color-red),
-    #000 var(--color-darker4)
-  );
-  --color-red-light: color-mix(
-    in srgb,
-    var(--color-red),
-    #fff var(--color-light)
-  );
-  --color-red-light2: color-mix(
-    in srgb,
-    var(--color-red),
-    #fff var(--color-light2)
-  );
-  --color-red-light3: color-mix(
-    in srgb,
-    var(--color-red),
-    #fff var(--color-light3)
-  );
-  --color-red-light4: color-mix(
-    in srgb,
-    var(--color-red),
-    #fff var(--color-light4)
-  );
-
-  --color-green: hsl(var(--color-green-hue), 100%, 50%);
-  --color-green-darker: color-mix(
-    in srgb,
-    var(--color-green),
-    #000 var(--color-darker)
-  );
-  --color-green-darker2: color-mix(
-    in srgb,
-    var(--color-green),
-    #000 var(--color-darker2)
-  );
-  --color-green-darker3: color-mix(
-    in srgb,
-    var(--color-green),
-    #000 var(--color-darker3)
-  );
-  --color-green-darker4: color-mix(
-    in srgb,
-    var(--color-green),
-    #000 var(--color-darker4)
-  );
-  --color-green-light: color-mix(
-    in srgb,
-    var(--color-green),
-    #fff var(--color-light)
-  );
-  --color-green-light2: color-mix(
-    in srgb,
-    var(--color-green),
-    #fff var(--color-light2)
-  );
-  --color-green-light3: color-mix(
-    in srgb,
-    var(--color-green),
-    #fff var(--color-light3)
-  );
-  --color-green-light4: color-mix(
-    in srgb,
-    var(--color-green),
-    #fff var(--color-light4)
-  );
-
-  --color-cyan: hsl(var(--color-cyan-hue), 100%, 50%);
-  --color-cyan-darker: color-mix(
-    in srgb,
-    var(--color-cyan),
-    #000 var(--color-darker)
-  );
-  --color-cyan-darker2: color-mix(
-    in srgb,
-    var(--color-cyan),
-    #000 var(--color-darker2)
-  );
-  --color-cyan-darker3: color-mix(
-    in srgb,
-    var(--color-cyan),
-    #000 var(--color-darker3)
-  );
-  --color-cyan-darker4: color-mix(
-    in srgb,
-    var(--color-cyan),
-    #000 var(--color-darker4)
-  );
-  --color-cyan-light: color-mix(
-    in srgb,
-    var(--color-cyan),
-    #fff var(--color-light)
-  );
-  --color-cyan-light2: color-mix(
-    in srgb,
-    var(--color-cyan),
-    #fff var(--color-light2)
-  );
-  --color-cyan-light3: color-mix(
-    in srgb,
-    var(--color-cyan),
-    #fff var(--color-light3)
-  );
-  --color-cyan-light4: color-mix(
-    in srgb,
-    var(--color-cyan),
-    #fff var(--color-light4)
-  );
-
-  --color-yellow: hsl(var(--color-yellow-hue), 100%, 50%);
-  --color-yellow-darker: color-mix(
-    in srgb,
-    var(--color-yellow),
-    #000 var(--color-darker)
-  );
-  --color-yellow-darker2: color-mix(
-    in srgb,
-    var(--color-yellow),
-    #000 var(--color-darker2)
-  );
-  --color-yellow-darker3: color-mix(
-    in srgb,
-    var(--color-yellow),
-    #000 var(--color-darker3)
-  );
-  --color-yellow-darker4: color-mix(
-    in srgb,
-    var(--color-yellow),
-    #000 var(--color-darker4)
-  );
-  --color-yellow-light: color-mix(
-    in srgb,
-    var(--color-yellow),
-    #fff var(--color-light)
-  );
-  --color-yellow-light2: color-mix(
-    in srgb,
-    var(--color-yellow),
-    #fff var(--color-light2)
-  );
-  --color-yellow-light3: color-mix(
-    in srgb,
-    var(--color-yellow),
-    #fff var(--color-light3)
-  );
-  --color-yellow-light4: color-mix(
-    in srgb,
-    var(--color-yellow),
-    #fff var(--color-light4)
-  );
-  --color-orange: hsl(var(--color-orange-hue), 100%, 50%);
-  --color-orange-darker: color-mix(
-    in srgb,
-    var(--color-orange),
-    #000 var(--color-darker)
-  );
-  --color-orange-darker2: color-mix(
-    in srgb,
-    var(--color-orange),
-    #000 var(--color-darker2)
-  );
-  --color-orange-darker3: color-mix(
-    in srgb,
-    var(--color-orange),
-    #000 var(--color-darker3)
-  );
-  --color-orange-darker4: color-mix(
-    in srgb,
-    var(--color-orange),
-    #000 var(--color-darker4)
-  );
-  --color-orange-light: color-mix(
-    in srgb,
-    var(--color-orange),
-    #fff var(--color-light)
-  );
-  --color-orange-light2: color-mix(
-    in srgb,
-    var(--color-orange),
-    #fff var(--color-light2)
-  );
-  --color-orange-light3: color-mix(
-    in srgb,
-    var(--color-orange),
-    #fff var(--color-light3)
-  );
-  --color-orange-light4: color-mix(
-    in srgb,
-    var(--color-orange),
-    #fff var(--color-light4)
-  );
-  --color-blue: hsl(var(--color-blue-hue), 100%, 50%);
-  --color-blue-light: color-mix(
-    in srgb,
-    var(--color-blue),
-    #fff var(--color-light)
-  );
-  --color-blue-light2: color-mix(
-    in srgb,
-    var(--color-blue),
-    #fff var(--color-light2)
-  );
-  --color-blue-light3: color-mix(
-    in srgb,
-    var(--color-blue),
-    #fff var(--color-light3)
-  );
-  --color-blue-light4: color-mix(
-    in srgb,
-    var(--color-blue),
-    #fff var(--color-light4)
-  );
-  --color-blue-darker: color-mix(
-    in srgb,
-    var(--color-blue),
-    #000 var(--color-darker)
-  );
-  --color-blue-darker2: color-mix(
-    in srgb,
-    var(--color-blue),
-    #000 var(--color-darker2)
-  );
-  --color-blue-darker3: color-mix(
-    in srgb,
-    var(--color-blue),
-    #000 var(--color-darker3)
-  );
-  --color-blue-darker4: color-mix(
-    in srgb,
-    var(--color-blue),
-    #000 var(--color-darker4)
-  );
-
-  --color-primary: var(--color-blue);
-  --color-primary-light: var(--color-blue-light);
-  --color-primary-light2: var(--color-blue-light2);
-  --color-primary-light3: var(--color-blue-light3);
-  --color-primary-light4: var(--color-blue-light4);
-  --color-primary-darker: var(--color-blue-darker);
-  --color-primary-darker2: var(--color-blue-darker2);
-  --color-primary-darker3: var(--color-blue-darker3);
-  --color-primary-darker4: var(--color-blue-darker4);
-  --color-primary2-varname: --color-yellow;
-  --color-primary2: var(--color-yellow);
-  --color-primary2-light: var(--color-yellow-light);
-  --color-primary2-light2: var(--color-yellow-light2);
-  --color-primary2-light3: var(--color-yellow-light3);
-  --color-primary2-light4: var(--color-yellow-light4);
-  --color-primary2-darker: var(--color-yellow-darker);
-  --color-primary2-darker2: var(--color-yellow-darker2);
-  --color-primary2-darker3: var(--color-yellow-darker3);
-  --color-primary2-darker4: var(--color-yellow-darker4);
-
-  --color-music: var(--color-cyan);
-  --color-music-light: var(--color-cyan-light);
-  --color-music-light2: var(--color-cyan-light2);
-  --color-music-light3: var(--color-cyan-light3);
-  --color-music-light4: var(--color-cyan-light4);
-  --color-music-darker: var(--color-cyan-darker);
-  --color-music-darker2: var(--color-cyan-darker2);
-  --color-music-darker3: var(--color-cyan-darker3);
-  --color-music-darker4: var(--color-cyan-darker4);
-}
+@import "./globals-colors.css";
+@import "./globals-resolution.css";
 
 html,
 body {
@@ -320,92 +25,34 @@ body {
   box-sizing: border-box;
 }
 
-a {
-  color: var(--color-primary);
-  text-decoration: none;
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-.music {
-  a {
-    color: var(--color-yellow);
+a {
+  color: var(--color-link);
+  text-decoration: none;
 
-    &:hover {
-      color: var(--color-yellow-light4);
-    }
+  &:hover,
+  &:focus,
+  &:active {
+    text-decoration: underline;
+    color: var(--color-link-hover);
+  }
+
+  &:hover {
+    cursor: pointer;
   }
 }
 
-a:hover,
-a:focus,
-a:active {
-  text-decoration: underline;
-}
-a:hover {
-  color: var(--color-primary-light);
-  cursor: pointer;
-}
-
 /** Layout **/
-.content {
-  padding: 0rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: center;
-}
 
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: center;
-  width: 100vw;
-  padding-bottom: calc(4vh - 2px);
-  min-height: 100%;
-}
 .extra-margin {
   margin: 0 4vw;
   width: 100vw;
   max-width: 100%;
-}
-
-@media (width >= 640px) {
-  .content {
-    padding: 2rem 0;
-  }
-}
-
-.title {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  line-height: 1;
-}
-
-h1.title {
-  font-size: 7vw;
-}
-
-h2.title {
-  font-size: 4vw;
-}
-
-.title {
-  text-align: center;
-}
-
-.main {
-  width: 95vw;
-  height: 100%;
-}
-
-@media (width >= 640px) {
-  .title {
-    font-size: 4em;
-  }
-  .main {
-    width: calc(640px * 0.95);
-  }
 }
 
 /** Menú **/
