--- a/packages/front/app/style.module.css
+++ b/packages/front/app/style.module.css
@@ -1,14 +1,13 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: calc(100vh - 78px);
 }
 
 .title a {
-  color: #0070f3;
+  color: var(--color-primary);
   text-decoration: none;
 }
 
@@ -24,33 +23,12 @@
   font-size: 3.6rem;
 }
 
-.title {
-  text-align: center;
-}
-
 .title,
-.description {
+.version {
   text-align: center;
 }
 
-.description {
+.version {
   line-height: 1.5;
   font-size: 1.5rem;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100vw;
-    flex-direction: column;
-  }
 }
