--- a/packages/front/modules/music/history/entry/body/style.module.css
+++ b/packages/front/modules/music/history/entry/body/style.module.css
@@ -11,26 +11,6 @@
   }
 }
 
-.container .item {
-  display: block;
-  width: 100vw;
-  margin: 0;
-  padding: 0 0vw;
-  margin-bottom: 2vh;
-}
-
-.container .column2 {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 100%;
-}
-.container .column2 > span {
-  display: flex;
-  flex-direction: row;
-  width: 50%;
-}
-
 .container span {
   display: flex;
 }
@@ -44,7 +24,7 @@
   justify-items: center;
 }
 
-.container textarea {
+.container :global(.ui-kit-input-text) {
   min-width: 150px;
 }
 
@@ -57,33 +37,18 @@
 .container .title,
 .container .artist {
   flex-grow: 1;
-  width: auto;
 }
 
 .container .tags {
   flex-wrap: nowrap;
 }
 
-.container .weight input {
-  width: 5vw;
-  min-width: 50px;
+.container .weight :global(.ui-kit-input-number) {
+  width: 4rem;
 }
 
 span.break {
   flex-basis: 100%;
   height: 0;
   margin-bottom: 3vh;
-}
-
-.container .containerTime {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.container .containerTime span {
-  display: flex;
-  flex-direction: column;
-  padding: 0 0.5vw;
 }
