--- a/packages/front/modules/musics/history/entry/body/style.module.css
+++ b/packages/front/modules/musics/history/entry/body/style.module.css
@@ -1,54 +1,15 @@
 .container {
-  padding: 2vh 5vw;
-  border-top: 2px solid var(--history-entry-border-color);
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-
-  @media (width >= 640px) {
-    padding: 1rem 2rem;
+  .album,
+  .title,
+  .artist {
+    flex-grow: 1;
   }
-}
 
-.container span {
-  display: flex;
-}
+  .tags {
+    flex-wrap: nowrap;
+  }
 
-.container .line {
-  width: 100%;
-  margin: 0;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-items: center;
-}
-
-.container :global(.ui-kit-input-text) {
-  min-width: 150px;
-}
-
-.container .height1half {
-  margin-top: 0.25em;
-  margin-bottom: 0.25em;
-}
-
-.container .album,
-.container .title,
-.container .artist {
-  flex-grow: 1;
-}
-
-.container .tags {
-  flex-wrap: nowrap;
-}
-
-.container .weight :global(.ui-kit-input-number) {
-  width: 4rem;
-}
-
-span.break {
-  flex-basis: 100%;
-  height: 0;
-  margin-bottom: 3vh;
+  .weight :global(.ui-kit-input-number) {
+    width: 4rem;
+  }
 }
