--- a/packages/front/modules/series/episodes/history/entry/body/style.module.css
+++ b/packages/front/modules/series/episodes/history/entry/body/style.module.css
@@ -5,6 +5,7 @@
 
   .startEnd {
     column-gap: 1.5em;
+    flex-wrap: wrap !important;
 
     .start :global(.ui-kit-input-number),
     .end :global(.ui-kit-input-number) {
@@ -20,6 +21,7 @@
     .end {
       flex-grow: 1;
       flex-shrink: 1;
+      column-gap: 1rem;
     }
 
     .start span,
@@ -28,20 +30,19 @@
     }
   }
 
-  .tags {
-    flex-wrap: nowrap;
-  }
-
-  .url {
-    flex-wrap: nowrap;
-  }
-
   .url * {
     margin: 0.25em 0;
   }
 
   .url a {
-    margin-left: 1em;
     text-wrap: wrap;
+  }
+
+  .duration {
+    text-wrap: nowrap;
+  }
+
+  .update {
+    margin-left: 1em;
   }
 }
