--- a/packages/front/styles/globals-ui-kit.css
+++ b/packages/front/styles/globals-ui-kit.css
@@ -9,6 +9,12 @@
   width: 100%;
 }
 
+.ui-kit-input-text,
+.ui-kit-input-number,
+.ui-kit-resource-input-array-string .ui-kit-array-item {
+  height: calc(1rem + 6.66667px);
+}
+
 .ui-kit-input-text {
   min-width: 150px;
 }
@@ -45,4 +51,44 @@
   border: 1px solid black;
   border-radius: 5px;
   overflow: hidden;
+}
+
+.ui-kit-resource-input-array-string {
+  display: flex;
+  gap: 0.25em 0.5em;
+  flex-wrap: wrap;
+
+  .ui-kit-input-text {
+    min-width: 0;
+    width: 8rem;
+  }
+}
+
+.ui-kit-resource-input-array-string .ui-kit-array-item {
+  border-radius: 0.5em;
+  border: 1px solid #000;
+  padding: 0 0.5em;
+  display: flex;
+  align-items: center;
+
+  .ui-kit-delete-button a {
+    --color: red;
+    display: inline-block;
+    width: 1em;
+    border-color: var(--color);
+    color: var(--color);
+    height: 1em;
+    text-align: center;
+    line-height: 1em;
+    margin-left: 0.5em;
+  }
+}
+
+.ui-kit-resource-input-array-string .ui-kit-array-add-item {
+  .ui-kit-add-button {
+    --color: green;
+    border-color: var(--color);
+    color: var(--color);
+    padding: 0 0.25em;
+  }
 }
