--- a/packages/front/styles/globals.css
+++ b/packages/front/styles/globals.css
@@ -35,17 +35,17 @@ body {
 a {
   color: var(--color-link);
   text-decoration: none;
+}
 
-  &:hover,
-  &:focus,
-  &:active {
-    text-decoration: underline;
-    color: var(--color-link-hover);
-  }
+a:hover,
+a:focus,
+a:active {
+  text-decoration: underline;
+  color: var(--color-link-hover);
+}
 
-  &:hover {
-    cursor: pointer;
-  }
+a:hover {
+  cursor: pointer;
 }
 
 /** Layout **/
