--- a/packages/front/styles/resources/history-entry.css
+++ b/packages/front/styles/resources/history-entry.css
@@ -1,3 +1,10 @@
+.history-list {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .history-entry {
   width: 100%;
 
@@ -39,7 +46,7 @@
         margin: 0;
         display: flex;
         align-items: center;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         justify-items: center;
         column-gap: 1em;
       }
@@ -56,10 +63,6 @@
         flex-basis: 100%;
         height: 0;
         margin-bottom: 3vh;
-      }
-
-      .ui-kit-input-text {
-        min-width: 150px;
       }
 
       .ui-kit-resource-input-text:last-child,
