--- a/packages/front/styles/globals-ui-kit.css
+++ b/packages/front/styles/globals-ui-kit.css
@@ -51,6 +51,10 @@
   border: 1px solid black;
   border-radius: 5px;
   overflow: hidden;
+
+  &.is-null:not(:focus) {
+    background-color: #ddd;
+  }
 }
 
 .ui-kit-resource-input-array-string {
